--- a/.env
+++ b/.env
@@ -1,8 +1,4 @@
 ADMIN_SECRET_EMAIL="sfhtebatta@gmail.com"
 ADMIN_SECRET_PASSWORD="12345678"
 
-
-MYSQL_CONNECTION_HOST="localhost"
-MYSQL_CONNECTION_USER="root"
-MYSQL_CONNECTION_PASSWORD=""
-MYSQL_CONNECTION_DATABASE=""
+MONGODB_CONNECTION_STRING=mongodb://admin:admin123@127.0.0.1:27017/sjekk?authSource=admin
