--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 ADMIN_SECRET_EMAIL="sfhtebatta@gmail.com"
 ADMIN_SECRET_PASSWORD="12345678"
 
-MONGODB_CONNECTION_STRING=mongodb://admin:admin123@127.0.0.1:27017/sjekk?authSource=admin
+MONGODB_CONNECTION_STRING=mongodb://127.0.0.1:27017/zainlak
