--- a/.env
+++ b/.env
@@ -1,7 +1,19 @@
+# ADMIN_SECRET_EMAIL=sfhtebatta@gmail.com
+# ADMIN_SECRET_PASSWORD=12345678
+
+# PORT=3000
+# STATIC_FILES_HOST=http://localhost:3000/
+
+# MONGODB_CONNECTION_STRING=mongodb://127.0.0.1:27017/zainlak
+
+
 ADMIN_SECRET_EMAIL=sfhtebatta@gmail.com
 ADMIN_SECRET_PASSWORD=12345678
 
 PORT=3000
-STATIC_FILES_HOST=http://localhost:3000/
+STATIC_FILES_HOST=http://154.56.60.119:3000/
 
-MONGODB_CONNECTION_STRING=mongodb://127.0.0.1:27017/zainlak
+MONGODB_CONNECTION_STRING=mongodb://admin:admin123@127.0.0.1:27017/zainlak?authSource=admin
+
+
+
